# memori

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: python-package.yml  python-publish.yml
memori/: __init__.py  helpers.py  logging.py  pathman.py  pipeline.py  stage.py
memori/scripts/: memori.py  pathman.py
tests/: memori_test.py
