[metadata]
name = memori
author = Andrew Van
author_email = vanandrew@wustl.edu
url= https://github.com/vanandrew/memori
version = 0.1.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True

[options.extras_require]
dev =
    black >= 20.8b0
all =
    %(dev)s

[pycodestyle]
ignore = E203, W503
max-line-length = 120
