[metadata]
name = memori
author = Andrew Van
author_email = vanandrew@wustl.edu
url= https://github.com/vanandrew/memori
version = 0.1.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    black >= 20.8b0
    pytest >= 6.2.5
    coverage >= 5.5
    pytest-pycodestyle >= 2.2.0
all =
    %(dev)s

[tool:pytest]
addopts = -v --pycodestyle
testpaths =
    tests
    memori

[pycodestyle]
ignore = E203, W503
max-line-length = 120

[coverage:run]
command_line = -m pytest
source = memori

[coverage:report]
show_missing = True
precision = 2

[pylint."MESSAGES CONTROL"]
disable = line-too-long,
          invalid-name,
          missing-module-docstring,
          missing-class-docstring,
          missing-function-docstring,
          too-many-arguments,
          too-many-statements,
          too-many-locals,
          wildcard-import,
          unused-argument,
          unused-wildcard-import,
          import-outside-toplevel,
          attribute-defined-outside-init,
          C0330, C0326,
          dangerous-default-value
